Altered front page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="content text-center">
             <h1>Hi, I'm Douglas Boubert!</h1>
 
-            <p class="lead">Astrophysicist</p>
+            <p class="lead">PhD student, University of Cambridge</p>
             <ul class="social-icon">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -70,19 +70,7 @@
             </div>
             <div class="col-md-12">
                 <p>
-                    Credibly embrace visionary internal or "organic" sources and business benefits. Collaboratively
-                    integrate efficient portals rather than customized customer service. Assertively deliver
-                    frictionless services via leveraged interfaces. Conveniently evisculate accurate sources and
-                    process-centric expertise. Energistically fabricate customized imperatives through cooperative
-                    catalysts for change.
-
-                </p>
-
-                <p>
-                    Dramatically predominate mission-critical materials and cooperative systems. Holisticly synergize
-                    optimal results through team building "outside the box" thinking. Seamlessly facilitate frictionless
-                    relationships via robust imperatives. Monotonectally brand wireless products and excellent action
-                    items. Monotonectally disintermediate granular alignments via sustainable infomediaries.
+                    I am astrophysics PhD student at the Institute of Astronomy in the University of Cambridge. My work lies in the intersection of Galactic dynamics and binary star evolution. Since the first Gaia data release I have focussed on applying Bayesian inference to this overlap. I will be applying for post-doctoral positions in the 2017/18 cycle.
                 </p>
             </div>
         </div>
