--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Online CV - Professional HTML CSS Resume Website Template</title>
+    <title>Douglas Boubert</title>
 
     <!-- favicon -->
     <link href="favicon.png" rel=icon>
@@ -21,6 +21,8 @@
 
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet">
+    
+    <!-- Custom style things -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
