--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
             <p class="lead">PhD student, University of Cambridge</p>
             <ul class="social-icon">
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <!-- <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li> -->
+                <li><a href="https://twitter.com/diagonalisable"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <!-- <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li> -->
             </ul>
         </div>
         <div class="profile-img"></div>
