--- a/index.html
+++ b/index.html
@@ -223,49 +223,6 @@
 </section>
 <!-- .skills-wrapper -->
 
-<section class="section-wrapper section-experience gray-bg">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title"><h2>Work Experience</h2></div>
-            </div>
-        </div>
-        <!--.row-->
-        <div class="row">
-            <div class="col-md-12">
-                <div class="content-item">
-                    <small>2015 - Present</small>
-                    <h3>Head of market research</h3>
-                    <h4>Computer & Motor Ltd.</h4>
-
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-                <div class="content-item">
-                    <small>2012 - 2015</small>
-                    <h3>Media Analyst</h3>
-                    <h4>BizzNiss</h4>
-
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-                <div class="content-item">
-                    <small>2010 - 2012</small>
-                    <h3>Budget Administrator</h3>
-                    <h4>Somsom LLC</h4>
-
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-            </div>
-        </div>
-        <!--.row-->
-    </div>
-    <!-- .container-fluid -->
-
-</section>
-<!-- .section-experience -->
-
 <section class="section-wrapper section-education">
     <div class="container-fluid">
         <div class="row">
@@ -277,27 +234,19 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content-item">
-                    <small>2010 - 2012</small>
-                    <h3>MA Product Design</h3>
-                    <h4>University of California</h4>
+                    <small>2015 - Present</small>
+                    <h3>PhD in Astrophysics</h3>
+                    <h4>University of Cambridge</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Cambridge, United Kingdom</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2007 - 2010</small>
-                    <h3>Business marketing course</h3>
-                    <h4>Royal Academy of Business</h4>
+                    <small>2011 - 2015</small>
+                    <h3>MSci/BA in Natural Sciences</h3>
+                    <h4>University of Cambridge</h4>
 
-                    <p>United Kingdom, London</p>
-                </div>
-                <!-- .experience-item -->
-                <div class="content-item">
-                    <small>2002 - 2006</small>
-                    <h3>BA (Hons) Design</h3>
-                    <h4>University of Michigan</h4>
-
-                    <p>United Kingdom, London</p>
+                    <p>Cambridge, United Kingdom</p>
                 </div>
                 <!-- .experience-item -->
             </div>
