--- a/index.html
+++ b/index.html
@@ -79,65 +79,6 @@
     </div>
 </section>
 
-
-<section class="expertise-wrapper section-wrapper gray-bg">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title">
-                    <h2>Expertise</h2>
-                </div>
-            </div>
-        </div>
-        <!-- .row -->
-
-        <div class="row">
-            <div class="col-md-6">
-                <div class="expertise-item">
-                    <h3>Professionally drive</h3>
-
-                    <p>
-                        Synergistically strategize customer directed resources rather than principle.
-                    </p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="expertise-item">
-                    <h3>Seamlessly leverage </h3>
-
-                    <p>
-                        Quickly repurpose reliable customer service with orthogonal ideas. Competently.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <!-- .row -->
-        <div class="row">
-            <div class="col-md-6">
-                <div class="expertise-item">
-                    <h3>Interactively incubate</h3>
-
-                    <p>
-                        Interactively myocardinate high standards in initiatives rather than next-generation.
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-md-6">
-                <div class="expertise-item">
-                    <h3>Globally streamline</h3>
-
-                    <p>
-                        Dynamically initiate client-based convergence vis-a-vis performance based. </p>
-                </div>
-            </div>
-        </div>
-        <!-- .row -->
-    </div>
-    <!--.container-fluid-->
-</section>
-<!-- .expertise-wrapper -->
-
 <section class="section-wrapper section-education gray-bg">
     <div class="container-fluid">
         <div class="row">
@@ -220,7 +161,65 @@
 </section>
 <!-- .section-publications -->
 
-<section class="section-contact section-wrapper gray-bg">
+<section class="expertise-wrapper section-wrapper gray-bg">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-title">
+                    <h2>Other interests</h2>
+                </div>
+            </div>
+        </div>
+        <!-- .row -->
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="expertise-item">
+                    <h3>Teaching</h3>
+
+                    <p>
+                        Two-on-one teaching of undergraduate students in first year mathematics and third year Physics of Astrophysics for the University of Cambridge.
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="expertise-item">
+                    <h3>Outreach </h3>
+
+                    <p>
+                        Developed the VR app "Virtual Sky - ISS" which simulates the view from the orbit of the ISS. Host groups of school-age children at the Cambridge Observatories. 
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- .row -->
+        <div class="row">
+            <div class="col-md-6">
+                <div class="expertise-item">
+                    <h3>Governance</h3>
+
+                    <p>
+                        Member of the graduate student forum in the department. Student representative on a major building project at Churchill College.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="expertise-item">
+                    <h3>Boardgames</h3>
+
+                    <p>
+                        Memorised the rules of more than 30 boardgames. </p>
+                </div>
+            </div>
+        </div>
+        <!-- .row -->
+    </div>
+    <!--.container-fluid-->
+</section>
+<!-- .expertise-wrapper -->
+
+<section class="section-contact section-wrapper ">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
