--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="col-md-12">
                 <p>
-                    I am astrophysics PhD student at the Institute of Astronomy in the University of Cambridge. My work lies in the intersection of Galactic dynamics and binary star evolution. Since the first Gaia data release I have focussed on applying Bayesian inference to this overlap. I will be applying for post-doctoral positions in the 2017/18 cycle.
+                    I am an astrophysics PhD student at the Institute of Astronomy in the University of Cambridge. My work lies in the intersection of Galactic dynamics and binary star evolution and in the application of Bayesian inference to the same. I will be applying for post-doctoral positions in the 2017/18 cycle so I can continue my work on the fastest stars in the Galaxy!
                 </p>
             </div>
         </div>
@@ -146,13 +146,13 @@
                     <p> <a href="http://adsabs.harvard.edu/abs/2017arXiv170405900B">Boubert, D., Fraser, M., Evans, N. W., Green, D., & Izzard, R. G. 2017, preprint (arXiv:1704.05900)</a> </p>
 
                 </div>
-                <div class="content-item">
+                <!--<div class="content-item">
                     <h3>Art</h3>
 
                     <p>Dramatically utilize superior infomediaries whereas functional core competencies.
                         Enthusiastically repurpose synergistic vortals for customer directed portals. Interactively
                         pursue sustainable leadership via.</p>
-                </div>
+                </div>-->
             </div>
         </div>
         <!-- .row -->
