Removed the annoying excited text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="left-col-block blocks">
     <header class="header">
         <div class="content text-center">
-            <h1>Hi, I'm Douglas Boubert!</h1>
+            <h1>Douglas Boubert</h1>
 
             <p class="lead">PhD student, University of Cambridge</p>
             <ul class="social-icon">
