--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>Portfolio</h2>
+                    <h2>Press coverage of my work</h2>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <a class="portfolio-item" href="#">
+                <a class="portfolio-item" href="https://www.google.com">
                     <div class="portfolio-thumb">
                         <img src="img/portfolio-1.jpg" alt="">
                     </div>
