--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <a class="portfolio-item" href="https://www.google.com">
+                <a class="portfolio-item" href="http://science.sciencemag.org/content/357/6346/8.full">
                     <div class="portfolio-thumb">
                         <img src="img/portfolio-1.jpg" alt="">
                     </div>
 
                     <div class="portfolio-info">
-                        <h3>Creative concepts</h3>
-                        <small>domain.com</small>
+                        <h3>‘Runaway’ stars fled nearby galaxy</h3>
+                        <small>Science</small>
                     </div>
                     <!-- portfolio-info -->
                 </a>
@@ -188,7 +188,7 @@
             <div class="col-md-6">
                 <a class="portfolio-item" href="#">
                     <div class="portfolio-thumb">
-                        <img src="img/portfolio-2.jpg" alt="">
+                        <img src="img/portfolio-1.jpg" alt="">
                     </div>
 
                     <div class="portfolio-info">
@@ -202,7 +202,7 @@
             <div class="col-md-6">
                 <a class="portfolio-item" href="#">
                     <div class="portfolio-thumb">
-                        <img src="img/portfolio-3.jpg" alt="">
+                        <img src="img/portfolio-1.jpg" alt="">
                     </div>
 
                     <div class="portfolio-info">
@@ -216,7 +216,7 @@
             <div class="col-md-6">
                 <a class="portfolio-item" href="#">
                     <div class="portfolio-thumb">
-                        <img src="img/portfolio-4.jpg" alt="">
+                        <img src="img/portfolio-1.jpg" alt="">
                     </div>
 
                     <div class="portfolio-info">
