--- a/index.html
+++ b/index.html
@@ -272,17 +272,18 @@
                     <h3>Governance</h3>
 
                     <p>
-                        Member of the graduate student forum in the department. Student representative on a major building project at Churchill College.
+                        Member of the graduate student forum in the Institute of Astronomy. Student representative on a major building project at Churchill College.
                     </p>
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Boardgames</h3>
+                    <h3>TBC</h3>
 
                     <p>
-                        Memorised the rules of more than 30 boardgames. </p>
+                        TBC. 
+                    </p>
                 </div>
             </div>
         </div>
